--- a/plugin/openstudio/lib/dialogs/html/About.html
+++ b/plugin/openstudio/lib/dialogs/html/About.html
@@ -23,8 +23,11 @@ function onOK() { window.location='skp:on_ok'; }
 <br>
 
 <span style="font-size:x-large;">OpenStudio SketchUp Plug-in</span><br><br>
-<input id="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" name="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
+SketchUp Plug-in Version:<br><input id="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" name="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
 <a href="https://openstudiocoalition.org/" target="_blank">https://openstudiocoalition.org/</a><br><br>
+
+OpenStudio Version:<br><input id="OPENSTUDIO_VERSION" name="OPENSTUDIO_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
+<a href="https://openstudio.net" target="_blank">https://openstudio.net/</a><br><br>
 
 Developed by the National Renewable Energy Laboratory<br>
 For the United States Department of Energy<br><br>
