Check for update working

--- a/plugin/openstudio/lib/dialogs/html/Preferences.html
+++ b/plugin/openstudio/lib/dialogs/html/Preferences.html
@@ -11,6 +11,7 @@ function onLoad() {
   document.getElementById('ok').focus();
   if (is_mac()) {
     // Automatic check for updates is not supported on the Mac yet.
+    // DLM: is this still true?
     document.getElementById('CHECK_FOR_UPDATE').checked = false;
     disableElement('CHECK_FOR_UPDATE');
   }
