Updating copyright per guidance from Alliance For Sustatianable Energy

--- a/plugin/openstudio/lib/dialogs/html/About.html
+++ b/plugin/openstudio/lib/dialogs/html/About.html
@@ -29,10 +29,7 @@ SketchUp Plug-in Version:<br><input id="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" name=
 OpenStudio Version:<br><input id="OPENSTUDIO_VERSION" name="OPENSTUDIO_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
 <a href="https://openstudio.net" target="_blank">https://openstudio.net/</a><br><br>
 
-Developed by the National Renewable Energy Laboratory<br>
-For the United States Department of Energy<br><br>
-
-Copyright &copy; 2008-2020, Alliance for Sustainable Energy, LLC, and other contributors<br><br>
+Copyright &copy; 2020-2020, OpenStudio Coalition and other contributors<br><br>
 
 <input id="ok" onclick="onOK()" type="button" class="button" value="     OK     ">
 
