Show Application Dir in About

--- a/plugin/openstudio/lib/dialogs/html/About.html
+++ b/plugin/openstudio/lib/dialogs/html/About.html
@@ -24,12 +24,13 @@ function onOK() { window.location='skp:on_ok'; }
 
 <span style="font-size:x-large;">OpenStudio SketchUp Plug-in</span><br><br>
 SketchUp Plug-in Version:<br><input id="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" name="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
+OpenStudio Application Dir:<br><input id="OPENSTUDIO_APPLICATION_DIR" name="OPENSTUDIO_APPLICATION_DIR" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
 <a href="https://openstudiocoalition.org/" target="_blank">https://openstudiocoalition.org/</a><br><br>
 
 OpenStudio SDK (core) Version:<br><input id="OPENSTUDIO_VERSION" name="OPENSTUDIO_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
 <a href="https://openstudio.net" target="_blank">https://openstudio.net/</a><br><br>
 
-Copyright &copy; 2020-2020, OpenStudio Coalition and other contributors<br><br>
+Copyright &copy; 2020-2021, OpenStudio Coalition and other contributors<br><br>
 
 <input id="ok" onclick="onOK()" type="button" class="button" value="     OK     ">
 
