Fix links to website and update about icon

--- a/plugin/openstudio/lib/dialogs/html/About.html
+++ b/plugin/openstudio/lib/dialogs/html/About.html
@@ -18,19 +18,21 @@ function onOK() { window.location='skp:on_ok'; }
 
 <center>
 
-<a href="https://openstudiocoalition.org/" target="_blank"><img src="sp_png_256x256.png" border="0"></a>
+<a href="https://openstudiocoalition.org/" target="_blank"><img src="os_256.png" border="0" width="250" height="250"></a>
 
 <br>
 
-<span style="font-size:x-large;">OpenStudio SketchUp Plug-in</span><br><br>
-SketchUp Plug-in Version:<br><input id="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" name="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
-OpenStudio Application Dir:<br><input id="OPENSTUDIO_APPLICATION_DIR" name="OPENSTUDIO_APPLICATION_DIR" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
+<span style="font-size:x-large;">OpenStudio SketchUp Plug-in</span><br><br><br><br>
+
+<b>SketchUp Plug-in Version:</b><br><input id="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" name="OPENSTUDIO_SKETCHUPPLUGIN_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
 <a href="https://openstudiocoalition.org/" target="_blank">https://openstudiocoalition.org/</a><br><br>
 
-OpenStudio SDK (core) Version:<br><input id="OPENSTUDIO_VERSION" name="OPENSTUDIO_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
+<b>OpenStudio Application Dir:</b><br><input id="OPENSTUDIO_APPLICATION_DIR" name="OPENSTUDIO_APPLICATION_DIR" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br><br>
+
+<b>OpenStudio SDK (core) Version:</b><br><input id="OPENSTUDIO_VERSION" name="OPENSTUDIO_VERSION" type="text" size="50" class="static_text" style="text-align:center; border:0; border-style:solid;" readonly><br>
 <a href="https://openstudio.net" target="_blank">https://openstudio.net/</a><br><br>
 
-Copyright &copy; 2020-2021, OpenStudio Coalition and other contributors<br><br>
+<b>Copyright &copy; 2020-2021:</b><br>OpenStudio Coalition and other contributors<br><br>
 
 <input id="ok" onclick="onOK()" type="button" class="button" value="     OK     ">
 
