--- a/plugin/openstudio/lib/dialogs/html/SurfaceMatching.html
+++ b/plugin/openstudio/lib/dialogs/html/SurfaceMatching.html
@@ -12,14 +12,26 @@ function onLoad() {
 function onMatchSelected() {
   window.location='skp:on_match_selected';
 }
+function onMatchSelectedbeta() {
+  window.location='skp:on_match_selected_beta';
+}
 function onMatchAll() {
   window.location='skp:on_match_all';
+}
+function onMatchAllbeta() {
+  window.location='skp:on_match_all_beta';
 }
 function onIntersectAll() {
   window.location='skp:on_intersect_all';
 }
+function onIntersectAllbeta() {
+  window.location='skp:on_intersect_all_beta';
+}
 function onIntersectSelected() {
   window.location='skp:on_intersect_selected';
+}
+function onIntersectSelectedbeta() {
+  window.location='skp:on_intersect_selected_beta';
 }
 function onUnmatchSelected() {
   window.location='skp:on_unmatch_selected';
@@ -41,14 +53,21 @@ function onCancel() {
 <fieldset>
 <legend>Intersect and Divide Inter-Zone Surfaces <a href="http://openstudiocoalition.org/reference/sketchup_plugin_interface/#surface-matching" target="_blank">(help)</a></legend>
 
-<i>Some users have reported issues with the intersect functionality in this dialog.  If you experience problems, please try to using the "IntersectSpaceGeometry" user script.</i>
+<i>Some users have reported issues with the intersect functionality in this dialog.  If you experience problems, please try to using the "IntersectSpaceGeometry" user script.  <br><br>SAVE A COPY BEFORE USING BETA!  Please report problems:<br>https://github.com/openstudiocoalition/openstudio-sketchup-plugin/issues</i>
 
 <table border="0" cellpadding="4" width="100%" align="center">
 
 <tr>
 <td style="text-align:center;">
-<input id="INTERSECT_ALL" onclick="onIntersectAll()" type="button" class="button" value="Intersect in Entire Model" style="text-align:center;width:150px; margin-left:3px;">
+<input id="INTERSECT_ALL" onclick="onIntersectAll()" type="button" class="button" value="Intersect in Entire Model" style="text-align:center;width:155px; margin-left:3px;">
 <input id="INTERSECT_SELECTED" onclick="onIntersectSelected()" type="button" class="button" value="Intersect in Selection" style="text-align:center;width:150px; margin-left:3px;">
+</td>
+</tr>
+
+<tr>
+<td style="text-align:center;">
+<input id="INTERSECT_ALLbeta" onclick="onIntersectAllbeta()" type="button" class="button" value="Intersect Whole Model BETA" style="text-align:center;width:185px; margin-left:3px;">
+<input id="INTERSECT_SELECTEDbeta" onclick="onIntersectSelectedbeta()" type="button" class="button" value="Intersect Selection BETA" style="text-align:center;width:160px; margin-left:3px;">
 </td>
 </tr>
 
@@ -66,6 +85,13 @@ function onCancel() {
 <td style="text-align:center;">
 <input id="MATCH_ALL" onclick="onMatchAll()" type="button" class="button" value="Match in Entire Model" style="text-align:center;width:150px; margin-left:3px;">
 <input id="MATCH_SELECTED" onclick="onMatchSelected()" type="button" class="button" value="Match in Selection" style="text-align:center;width:150px; margin-left:3px;">
+</td>
+</tr>
+
+<tr>
+<td style="text-align:center;">
+<input id="MATCH_ALLbeta" onclick="onMatchAllbeta()" type="button" class="button" value="Match in Entire Model BETA" style="text-align:center;width:180px; margin-left:3px;">
+<input id="MATCH_SELECTEDbeta" onclick="onMatchSelectedbeta()" type="button" class="button" value="Match in Selection BETA" style="text-align:center;width:165px; margin-left:3px;">
 </td>
 </tr>
 
