Implement search invert

--- a/plugin/openstudio/lib/dialogs/html/SurfaceSearch.html
+++ b/plugin/openstudio/lib/dialogs/html/SurfaceSearch.html
@@ -158,6 +158,18 @@ function onChangeAzimuth(element) {
 <label for="HIGH_POLY_SURFACES">Only Show Surfaces With More Than <input name="VERTEX_LIMIT" type="text" class="text" size="3" width="3"  onchange="onChangeElement(this)"> Vertices</label>
 </td>
 </tr>
+
+<tr>
+<td>
+</td>
+<td>
+<input id="INVERT_SEARCH" name="INVERT_SEARCH" type="checkbox" onclick="onChangeElement(this)">
+<label for="INVERT_SEARCH">Invert Search</label>
+&nbsp;&nbsp;&nbsp;&nbsp;
+<input id="INVERT_ACROSS_CLASSES" name="INVERT_ACROSS_CLASSES" type="checkbox" onclick="onChangeElement(this)">
+<label for="INVERT_ACROSS_CLASSES">Invert Across Classes</label>
+</td>
+</tr>
 </table>
 
 </fieldset>
