Add search by story

--- a/plugin/openstudio/lib/dialogs/html/SurfaceSearch.html
+++ b/plugin/openstudio/lib/dialogs/html/SurfaceSearch.html
@@ -120,6 +120,17 @@ function onChangeAzimuth(element) {
 </td>
 </tr>
 -->
+
+<tr>
+<td width="40%">
+&nbsp;&nbsp;Building Story:
+</td>
+<td width="60%">
+<select name="BUILDING_STORY" class="text" width="100%" style="width:100%;" onchange="onChangeElement(this)">
+</select>
+</td>
+</tr>
+
 <tr>
 <td>
 &nbsp;&nbsp;Surface Orientation:
